    - Dread Calculator:
      - Settings: show/hide the calculator in the Issues view
    - Nessus:
      - Add product_coverage & cvss3_impact_score as available Issue fields
    - Nexpose
      - Update HTML tag cleanup to better cover UnorderedList and URLLink tags in the solution field
    - Qualys
      - Add <dd>, <dt> support
      - Remove orphaned <b> tags

v4.0.0 (July 2021)
  * Dynamic content across the app
  * Upgraded gems: capybara, jquery-rails, rails, rdoc, resque-status, rubocop, nokogiri, papertrail, puma,
  * Bugs fixed:
    - Fix uploading of attachments with names that have newlines
  * REST/JSON API enhancements:
    - Add pagination support

v3.22.0 (April 2021)
  * Added the ability to import Configuration Kits
  * Comments
    - Load feed asynchronously
  * Improve accessibility:
    - Add alt text to any linked images
    - Add screen reader only text to forms
    - Adjustments to font and element contrast to meet at minimum Level AA WCAG 2.0 standards.
    - Fix any broken Aria references
    - Update element label association & add missing labels
  * Kit upload CLI command update
  * Replace deprecated font-awesome-sass gem with vendor asset files
  * Subscriptions
    - Load feed asynchronously
  * Truncate long hostnames when viewing evidence in an issue
  * Upgraded gems: Rails
  * Bugs fixed:
    - Placeholder gravatars appear if gravatar is not available

v3.21.0 (February 2021)
  * Upgraded DradisPro to run on Ruby 2.7.2 and Rails 6.1.1
  * Add view hooks for the export view
  * Increase secondary sidebar width for medium viewports
  * Upgraded gems: bundler, papertrail, rails
  * Bugs fixed:
    - Add a default user during Welcome setup
    - Correct position of sticky editor toolbar in fullscreen source view

v3.20.0 (January 2021)
  * Main sidebar improvements:
    - Labels added under icons
    - Nodes can be added in collapsed state
    - Removed animations and transitions while expanding and collapsing
  * Update logo assets